name:
  kerry
version:
  0.0
homepage:
  https://github.com/nhibberd/kerry#readme
bug-reports:
  https://github.com/nhibberd/kerry/issues
synopsis:
  kerry
description:
  kerry is a DSL for representing and rendering
  [packer](https://www.packer.io/) definitions.
license:
  BSD3
category:
  Infrastructure, AWS
license-file:
  LICENSE
author:
  Nick Hibberd <nhibberd@gmail.com>
maintainer:
  Nick Hibberd <nhibberd@gmail.com>
copyright:
  Copyright: (c) 2019 Nick Hibberd
build-type:
  Simple
extra-doc-files:
  README.md
  CHANGELOG.md
cabal-version:
  1.18

source-repository head
  type: git
  location: git://github.com/nhibberd/kerry.git

library
  build-depends:
      base                            >= 4.5        && < 5
    , aeson                           >= 1.4        && < 1.5
    , aeson-pretty                    >= 0.8        && < 1
    , bytestring                      >= 0.10       && < 0.11
    , containers                      >= 0.5        && < 0.7
    , errors                          >= 2.0        && < 2.4
    , mmorph                          >= 1.0        && < 1.2
    , text                            >= 1.2        && < 1.3
    , transformers                    >= 0.5        && < 0.6
    , transformers-bifunctors         >= 0.1        && < 0.2

  default-language:
    Haskell2010

  ghc-options:
    -Wall

  hs-source-dirs:
    src

  exposed-modules:
    Kerry.Builders.AmazonEC2
    Kerry.Data
    Kerry.Functions
    Kerry.Example
    Kerry.Prelude

test-suite test
  type:
    exitcode-stdio-1.0

  hs-source-dirs:
    test

  main-is:
    test.hs

  other-modules:
    Test.Kerry.Reverse

  build-depends:
      kerry
    , base
    , hedgehog                        >= 0.6        && < 0.7

  default-language:
    Haskell2010

  ghc-options:
    -Wall -threaded -rtsopts -with-rtsopts=-N
